<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application name -->
    <string name="app_name">FuelTracker</string>
    <string name="title_app_name">Fuel Tracker</string>

    <!-- Configs -->
    <string name="default_web_client_id">984199425136-64mflsmnnicqh38tf6rd54mm32euhv5s.apps.googleusercontent.com</string>

    <!-- Views -->
    <string name="page_settings">Settings</string>
    <string name="page_car_info">Car info</string>
    <string name="page_user_info">User info</string>
    <string name="page_reports">Reports</string>
    <string name="page_report_details">Details</string>

    <!-- Hint texts -->
    <string name="prompt_email">email address</string>
    <string name="prompt_password">password</string>

    <!-- Buttons -->
    <string name="button_login">Log In</string>
    <string name="button_register">register</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm password</string>
    <string name="title_sign_in">Sign in</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Car Status page -->
    <string name="text_id">Car identification number:</string>
    <string name="text_brand">Brand:</string>
    <string name="text_model">Model:</string>
    <string name="text_engine">Engine:</string>
    <string name="text_horse_power">Horse power:</string>

    <!-- Car Info page -->
    <string name="text_application_scope">Application scope</string>

    <!-- About App page -->
    <string name="title_about_this_app">About this app</string>
    <string name="text_app_info">This is FuelTracker, an android application that shows information about the users car and the fuel consumption for the last rides.\nThe application works on two sides:\n- The mobile app where the user creates a google account and will generate a pair code to connect to the car app. It will be visible in the User Info section.\n- The car app where the user connects via the pairing code from the mobile app. This process also takes place in the User Info section.\n\nOnce connected, the user will be able to see his account and car data on both platforms in the app.\nThe consumption data will be generated only 2 times a day, one at 10AM and at 18PM.\nThe consumption reports can be visible in the Daily Reports section, only if the user is connected on the both platforms.</string>

    <!-- Default text messages -->
    <string name="text_unknown">UNKNOWN</string>
    <string name="text_error_no_pairing_code_available">This code is not associated with an existing user. Register a new user in the mobile app first</string>
    <string name="text_general_consumption_reports">General consumption reports:</string>
    <string name="text_general_reports_info">All reports medium consumption score are present int the above chart for each drive report. With this you can see the fuel consumption score over time.</string>
</resources>