<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".carstatus.CarStatusFragment">

    <TextView
        android:id="@+id/text_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/text_brand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/text_model"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_brand" />

    <TextView
        android:id="@+id/text_engine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/text_engine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_model" />

    <TextView
        android:id="@+id/text_horsepower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/text_horse_power"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_engine" />

    <TextView
        android:id="@+id/label_brand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/text_unknown"
        app:layout_constraintStart_toEndOf="@id/text_brand"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/label_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/text_unknown"
        app:layout_constraintStart_toEndOf="@id/text_model"
        app:layout_constraintTop_toBottomOf="@id/label_brand"/>

    <TextView
        android:id="@+id/label_engine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/text_unknown"
        app:layout_constraintStart_toEndOf="@id/text_engine"
        app:layout_constraintTop_toBottomOf="@id/label_model"/>

    <TextView
        android:id="@+id/label_horse_power"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="50dp"
        android:textSize="25sp"
        android:text="@string/text_unknown"
        app:layout_constraintStart_toEndOf="@id/text_horsepower"
        app:layout_constraintTop_toBottomOf="@id/label_engine"/>

</androidx.constraintlayout.widget.ConstraintLayout>